--- a/content/blog/2020-11-26-first.md
+++ b/content/blog/2020-11-26-first.md
@@ -2,7 +2,7 @@
 title: "Something new is coming..."
 date: 2020-11-26T19:18:00.000Z
 image: /images/butler.jpg
-draft: true
+draft: false
 ---
 
 Pinball and some more stuff.
