added assembled image

--- a/content/blog/2020-11-26-de_power.md
+++ b/content/blog/2020-11-26-de_power.md
@@ -6,4 +6,4 @@ draft: false
 ---
 
 The Data East, Sega, Stern power adapter that is included with the files in the Pin2DMD repo.
-image: /images/DE-Power-2.jpg
+![Alt](/images/DE-Power-2.jpg 'Assembled Adapter')
